se suben las tareas de la tercer semana
rcarvajal

--- a/Modulo_1_Javascript_Testing/11_sesion/lesssion2/index.html
+++ b/Modulo_1_Javascript_Testing/11_sesion/lesssion2/index.html
@@ -7,13 +7,14 @@
     <link rel="Stylesheet" href="./style.css">
 </head>
 <body>
+    <h1>Calculadora de Promedio</h1>
     <form id="formularioNotas">
         <label>Nota1: </label>
         <input type="number" id="nota1">
         <label>Nota2: </label>
         <input type="number" id="nota2">
-        <label>Nota2: </label>
-        <input type="number" id="nota2">
+        <label>Nota3: </label>
+        <input type="number" id="nota3">
 
         <button type="submit">Calcular</button>
     </form>
